feat: implement user tenant access management with grant and revoke endpoints